Add locales.html and associated styles. Include new SVG images for branding.

--- a/entretenimiento.html
+++ b/entretenimiento.html
@@ -6,7 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/entretenimiento.css" />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Entretenimiento</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Playfair+Display:wght@700;900&display=swap"
+      rel="stylesheet"
+    />
+    <title>Entretenimiento | Galerías Pacifico</title>
 </head>
 
 <body>
@@ -14,27 +20,32 @@
 
     <header class="main-header">
         <div class="container">
-            <div class="logo">
-                <h1>Galerías Atlántico</h1>
-            </div>
-            <nav class="main-nav" role="navigation" aria-label="Navegación principal">
-                <ul>
-                    <li><a href="index.html" class="nav-link">Inicio</a></li>
-                    <li><a href="servicios.html" class="nav-link">Servicios</a></li>
-                    <li>
-                        <a href="entretenimiento.html" class="nav-link active">Entretenimiento</a
-              >
-            </li>
-            <li><a href="locales.html" class="nav-link">Locales</a></li>
-                    <li><a href="ofertas.html" class="nav-link">Ofertas</a></li>
-                    <li><a href="gastronomia.html" class="nav-link">Gastronomía</a></li>
-                    <li>
-                        <a href="contacto.html" class="nav-link cta-nav">Contacto</a>
-                    </li>
-                </ul>
-            </nav>
+          <div class="logo">
+            <h1>Galerías Atlántico</h1>
+          </div>
+          <nav
+            class="main-nav"
+            role="navigation"
+            aria-label="Navegación principal"
+          >
+            <ul>
+              <li><a href="index.html" class="nav-link">Inicio</a></li>
+              <li><a href="servicios.html" class="nav-link">Servicios</a></li>
+              <li>
+                <a href="entretenimiento.html" class="nav-link active"
+                  >Entretenimiento</a
+                >
+              </li>
+              <li><a href="locales.html" class="nav-link">Locales</a></li>
+              <li><a href="ofertas.html" class="nav-link">Ofertas</a></li>
+              <li><a href="gastronomia.html" class="nav-link">Gastronomía</a></li>
+              <li>
+                <a href="contacto.html" class="nav-link cta-nav">Contacto</a>
+              </li>
+            </ul>
+          </nav>
         </div>
-    </header>
+      </header>
 
     <main>
         <section class="activities">
