--- a/contacto.html
+++ b/contacto.html
@@ -76,7 +76,7 @@
                             <div class="contacto-icon"><img src="img/telefono-icon.png" alt="Ícono de teléfono" class="contacto-icon-img"></div>
                             <div class="contacto-detalles">
                                 <h4>Teléfono</h4>
-                                <p><a href="tel:+543414567890">341 456-7890</a></p>
+                                <p><a href="tel:+541155555555">+54 11 5555 5555</a></p>
                             </div>
                         </div>
 
@@ -92,9 +92,9 @@
                             <div class="contacto-icon"><img src="img/reloj-icon.png" alt="Ícono de reloj" class="contacto-icon-img"></div>
                             <div class="contacto-detalles">
                                 <h4>Horarios</h4>
-                                <p><strong>Lun-Vie:</strong> 10-22 hs</p>
-                                <p><strong>Sáb:</strong> 10-23 hs</p>
-                                <p><strong>Dom:</strong> 11-21 hs</p>
+                                <p><strong>Lunes a Viernes:</strong> 10 a 22 hs</p>
+                                <p><strong>Sábados:</strong> 10 a 23 hs</p>
+                                <p><strong>Domingos:</strong> 11 a 21 hs</p>
                             </div>
                         </div>
                     </div>
