--- a/ofertas.html
+++ b/ofertas.html
@@ -52,7 +52,7 @@
         <section class="filtros-section">
             <div class="container">
                 <div class="filtros-container">
-                    <h3>🔍 Filtrar ofertas por:</h3>
+                    <h3>Filtrar ofertas por:</h3>
                     <div class="filtros-buttons">
                         <button class="filtro-btn active" onclick="filtrarOfertas('todas')">
                 Todas las Promociones
