--- a/ofertas.html
+++ b/ofertas.html
@@ -138,7 +138,7 @@
                                 Ropa deportiva y urbana con 40% de descuento. Aprovechá esta oportunidad única.
                             </p>
                             <div class="oferta-meta">
-                                <span>Hasta 20/12</span>
+                                <span>Hasta el 20/12</span>
                                 <span>Local 15</span>
                             </div>
                         </div>
@@ -155,7 +155,7 @@
                                 Relojes inteligentes y accesorios deportivos. Tecnología para tu entrenamiento.
                             </p>
                             <div class="oferta-meta">
-                                <span>Hasta 30/12</span>
+                                <span>Hasta el 30/12</span>
                                 <span>Local 08</span>
                             </div>
                         </div>
@@ -172,7 +172,7 @@
                                 Decoración navideña y accesorios para el hogar. Dale un toque especial a tu casa.
                             </p>
                             <div class="oferta-meta">
-                                <span>Hasta 31/12</span>
+                                <span>Hasta el 31/12</span>
                                 <span>Local 25</span>
                             </div>
                         </div>
@@ -189,7 +189,7 @@
                                 2x1 en calzado seleccionado. Las mejores marcas al mejor precio.
                             </p>
                             <div class="oferta-meta">
-                                <span>Hasta 15/12</span>
+                                <span>Hasta el 15/12</span>
                                 <span>Local 30</span>
                             </div>
                         </div>
@@ -206,7 +206,7 @@
                                 Equipá tu vida digital con 20% de descuento en laptops y accesorios tecnológicos.
                             </p>
                             <div class="oferta-meta">
-                                <span>Hasta 31/12</span>
+                                <span>Hasta el 31/12</span>
                                 <span>Local 18</span>
                             </div>
                         </div>
@@ -223,7 +223,7 @@
                                 Accesorios y joyas para esta temporada. Regalos perfectos.
                             </p>
                             <div class="oferta-meta">
-                                <span>Hasta 24/12</span>
+                                <span>Hasta el 24/12</span>
                                 <span>Local 05</span>
                             </div>
                         </div>
