Refactor JavaScript by moving inline scripts from contacto.html, locales.html, and ofertas.html to separate JS files for better organization and maintainability.

--- a/contacto.html
+++ b/contacto.html
@@ -283,17 +283,7 @@
         </div>
     </footer>
 
-    <script>
-        document.getElementById('contactForm').addEventListener('submit', function(e) {
-            e.preventDefault();
-            const messageDiv = document.getElementById('formMessage');
-            messageDiv.innerHTML = '<p class="success-message">Mensaje enviado exitosamente! Te responderemos a la brevedad.</p>';
-            this.reset();
-            setTimeout(() => {
-                messageDiv.innerHTML = '';
-            }, 5000);
-        });
-    </script>
+    <script src="js/contacto.js" defer></script>
 </body>
 
 </html>
