--- a/ofertas.html
+++ b/ofertas.html
@@ -77,7 +77,7 @@
         <section class="ofertas-destacadas">
             <div class="container">
                 <div class="section-header">
-                    <h3>Ofertas Destacadas de la Semana</h3>
+                    <h3>Ofertas destacadas de la semana</h3>
                 </div>
                 <div class="ofertas-grid-destacadas">
                     <article class="oferta-card-grande" data-categoria="moda">
@@ -94,7 +94,7 @@
                                 50% de descuento en toda la colección de invierno.
                             </p>
                             <div class="oferta-detalles">
-                                <span class="oferta-validez">Válido hasta: 31/12</span>
+                                <span class="oferta-validez">Válido hasta: 31/12/2024</span>
                                 <span class="oferta-local">Piso 1 - Local 10</span>
                             </div>
                         </div>
@@ -114,7 +114,7 @@
                                 Hasta 30% de descuento en iPhones, iPads y accesorios tecnológicos de última generación.
                             </p>
                             <div class="oferta-detalles">
-                                <span class="oferta-validez">Válido hasta: 25/12</span>
+                                <span class="oferta-validez">Válido hasta: 25/12/2024</span>
                                 <span class="oferta-local">Piso 2 - Local 22</span>
                             </div>
                         </div>
