--- a/contacto.html
+++ b/contacto.html
@@ -278,7 +278,7 @@
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2025 Galería. Todos los derechos reservados.</p>
-                <p class="footer-credits">Desarrollado por <strong>...</strong></p>
+                <p class="footer-credits">Desarrollado por <strong>Grupo 7</strong></p>
             </div>
         </div>
     </footer>
